# NH-ORCA-python

./: CMakeLists.txt  README.md  py_wrapper.cpp
RVO2/examples/: Circle.cpp
RVO2/src/: Agent.cpp  Agent.h  CMakeLists.txt  Definitions.h  KdTree.cpp  KdTree.h  Obstacle.h  RVOSimulator.cpp  RVOSimulator.h  Vector2.h
python/: multiTurtleSim.py  rvo2_circle-Copy1.ipynb  turtleCtrl.py  turtle_control.ipynb  turtlebot.py
python/.ipynb_checkpoints/: rvo2_circle-checkpoint.ipynb  turtle_control-checkpoint.ipynb
python/data/2020-12-24-19-54-57/: _slash_diagnostics.csv  _slash_rosout.csv  _slash_rosout_agg.csv  _slash_tf.csv  _slash_tf_static.csv  _slash_turtle1_slash_cmd_vel_mux_slash_active.csv  _slash_turtle1_slash_cmd_vel_mux_slash_input_slash_teleop.csv  _slash_turtle1_slash_cmd_vel_mux_slash_parameter_descriptions.csv  _slash_turtle1_slash_cmd_vel_mux_slash_parameter_updates.csv  _slash_turtle1_slash_joint_states.csv  _slash_turtle1_slash_mobile_base_nodelet_manager_slash_bond.csv  _slash_turtle1_slash_mobile_base_slash_commands_slash_velocity.csv  _slash_turtle1_slash_mobile_base_slash_debug_slash_raw_control_command.csv  _slash_turtle1_slash_mobile_base_slash_debug_slash_raw_data_command.csv  _slash_turtle1_slash_mobile_base_slash_debug_slash_raw_data_stream.csv  _slash_turtle1_slash_mobile_base_slash_events_slash_robot_state.csv  _slash_turtle1_slash_mobile_base_slash_sensors_slash_core.csv  _slash_turtle1_slash_mobile_base_slash_sensors_slash_dock_ir.csv  _slash_turtle1_slash_mobile_base_slash_sensors_slash_imu_data.csv  _slash_turtle1_slash_odom.csv  (+57 more)
